qmllint: Avoid pointless warnings about JavaScript types

a, We don't need to resolve the generic type from the type propagator
   unless we already suspect a problem.
b, When we unambiguously identify a JavaScript object, we can return
   QJSValue without warning. No amount of metatype extraction will
   change this result.

Pick-to: 6.7
Fixes: QTBUG-126563
Change-Id: I6d456a28c4ada74ee2963a4e95bddf2eae219cd0
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>
(cherry picked from commit 41d4612f64055c1972b6570f84f5ec871cfe7acc)
Reviewed-by: Sami Shalayel <sami.shalayel@qt.io>