tests/auto/qml/qmllint/data/functionAssign1.qml
@@ -1,0 +1,6 @@
+import QtQml
+QtObject {
+    onObjectNameChanged: () => {
+        console.log("Entered")
+    }
+}
